Updated Zally violations. DAT-3373
