# api_server/openapi_server/controllers/buildstatuses_controller.py
@@ -27,7 +27,7 @@ def build_statuses_triggers_get():  # noqa: E501
             'project_id': status.get('project_id', ''),
             'repo_name': status.get('repo_name', ''),
             'status': status.get('status', ''),
-            'updated': status.get('updated', ''),
+            'updated_at': status.get('updated', ''),
             'log_url': status.get('log_url', '')
         } for status in db_data]
         return result
