# api_server/openapi_server/openapi/openapi.yaml
@@ -246,7 +246,7 @@ components:
         project_id: random-project-id
         repo_name: random-repo-name
         status: passing
-        updated: 2019-09-01T12:00:00+02:00
+        updated_at: 2019-09-01T12:00:00+02:00
         log_url: https://console.cloud.google.com/gcr/builds/random-project-id
       properties:
         branch:
@@ -261,7 +261,7 @@ components:
           - failing
           - passing
           type: string
-        updated:
+        updated_at:
           format: date-time
           type: string
         log_url:
@@ -272,7 +272,7 @@ components:
       - project_id
       - repo_name
       - status
-      - updated
+      - updated_at
       type: object
     ErrorReport:
       example:
@@ -280,7 +280,7 @@ components:
         labels: {}
         log_name: random-log-name
         project_id: random-project-id
-        receive_timestamp: 2019-09-01T12:00:00+02:00
+        received_at: 2019-09-01T12:00:00+02:00
         resource: {}
         severity: ERROR
         text_payload: This is a payload
@@ -294,7 +294,7 @@ components:
           type: string
         project_id:
           type: string
-        receive_timestamp:
+        received_at:
           format: date-time
           type: string
         resource:
@@ -308,12 +308,12 @@ components:
       required:
       - id
       - project_id
-      - receive_timestamp
+      - received_at
       type: object
     ErrorReportCount:
       example:
         count: 123
-        latest_updated: 2019-09-01T12:00:00+02:00
+        updated_at: 2019-09-01T12:00:00+02:00
         project_id: random-project-id
         resource:
           type: application
@@ -321,7 +321,7 @@ components:
         count:
           format: int32
           type: integer
-        latest_updated:
+        updated_at:
           format: date-time
           type: string
         project_id:
@@ -330,7 +330,7 @@ components:
           type: object
       required:
       - count
-      - latest_updated
+      - updated_at
       - project_id
       - resource
       type: object
@@ -344,7 +344,7 @@ components:
           labels: {}
           log_name: random-log-name
           project_id: random-project-id
-          receive_timestamp: 2019-09-01T12:00:00+02:00
+          received_at: 2019-09-01T12:00:00+02:00
           resource: {}
           severity: ERROR
           text_payload: This is a payload
